reflect-demo/src/tests/snapshots/reflect_demo__tests__basic__reflect_struct_with_transform_input_output.snap
---
source: reflect-demo/src/tests/basic.rs
expression: "TestStructWithTransformInput::reflect_output()"
---
{
  "name": "",
  "types": [
    {
      "kind": "struct",
      "name": "reflect_demo::tests::basic::TestStructWithTransformInput",
      "fields": [
        {
          "name": "_f",
          "type": {
            "name": "std::sync::Arc",
            "parameters": [
              {
                "name": "u8"
              }
            ]
          }
        }
      ]
    },
    {
      "kind": "primitive",
      "name": "std::sync::Arc",
      "description": "std::sync::Arc pointer type",
      "parameters": [
        {
          "name": "T"
        }
      ],
      "fallback": {
        "name": "T"
      }
    },
    {
      "kind": "primitive",
      "name": "u8",
      "description": "8-bit unsigned integer"
    }
  ]
}
